# rust_grapher

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/src/graph/: equation.rs  grid_lines.rs  mod.rs  normal.rs  renderable.rs  renderer.rs
archived_ecs/: Cargo.toml  types.toml
archived_ecs/src/: archetype.rs  component_array.rs  ecs.rs  lib.rs
ecs/: Cargo.toml
ecs/src/: archetype.rs  component_array.rs  ecs.rs  lib.rs
rendering/: Cargo.toml
rendering/src/: lib.rs  textures.rs
src/: app.rs  component.rs  lib.rs  main.rs  render_context.rs  renderer.rs  shader.wgsl  shader_gay.wgsl  state.rs
src/graph/: camera.rs  graph.rs  graph_camera.rs  graph_line.wgsl  graph_renderer.rs  graph_vertex.rs  grid_lines.rs  line.rs  line.wgsl  mod.rs  quadratic.rs  renderable.rs  renderer.rs  vertex.rs  view.rs
twoD/: Cargo.toml
twoD/src/: camera.rs  lib.rs  view.rs
twoD/src/primitives/: mod.rs
twoD/src/primitives/line/: line.rs  mod.rs  rect_pipeline.rs
two_dimensional/: Cargo.toml
two_dimensional/src/: lib.rs
two_dimensional/src/primitives/: mod.rs
two_dimensional/src/primitives/line/: line.rs  line.wgsl  mod.rs  rect_pipeline.rs
two_dimensional/src/primitives/text/: mod.rs  text_pipeline.rs
