[package]
name = "rust_grapher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.3"
env_logger = "0.9.1"
log = "0.4.17"
wgpu = "0.14.0"
pollster = "0.2.5"
bytemuck = { version = "1.12.1", features = ["derive"] }
cgmath = "0.18.0"

[dependencies.rendering]
path = "../rendering"

[dependencies.twoD]
path = "../twoD"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
