[package]
name = "two_dimensional"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
winit = "0.27.4"
bytemuck = { version = "1.12.1", features = ["derive"] }
wgpu = "0.14.0"
bevy_ecs = "0.8.1"

[dependencies.rendering]
path = "../rendering"

[lib]
name = "two_dimensional"
path = "src/lib.rs"
